# Multi_Bird_DB_Project

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  README_audio.md  README_graph.md  README_language.md  README_wikidata_pred.md  environment.yml  graph.txt  pyproject.toml  xeno_canto_api_key.env.example
analysis_notebooks/: README.md  qid_leaf_analysis.py
data/: README.md
docs/: architecture.md
docs/work_notes/: 2026-04-11_initial_scaffold.md
queries/: bird_descendants.sparql
scripts/: create_dummy_taxonomy_graph.py  download_wikidata_dump.sh  run_xeno_canto_pipeline.sh
src/multi_bird_db/: __init__.py  audio_backends.py  audio_embeddings.py  audio_windows.py  cli.py  config.py  dump_extract.py  embeddings.py  env_loader.py  fetch_script.py  graph.py  graph_dash.py  graph_evaluation.py  graph_visualization.py  language_embeddings.py  ontology.py  qids.py  sqlite_store.py  wikipedia_articles.py  xeno_canto_audio.py  xeno_canto_ids.py
src/multi_bird_db.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audio_backends.py  test_audio_embeddings.py  test_dump_extract.py  test_graph_embeddings.py  test_graph_evaluation.py  test_language_embeddings.py  test_xeno_canto_audio.py  test_xeno_canto_ids.py
