[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-bird-db"
version = "0.1.0"
description = "Reproducible Bird (Q5113) acquisition pipeline with multimodal-ready data layout."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash",
    "dash-cytoscape",
    "matplotlib",
    "networkx",
    "numpy",
]

[project.optional-dependencies]
language-bert = [
    "fugashi",
    "unidic-lite",
    "torch",
    "transformers",
]
audio-wav2vec2 = [
    "torch",
    "transformers",
]
audio-birdnet = [
    "birdnet",
    "tensorflow",
    "tensorflow-hub",
    "soundfile",
]
audio-perch = [
    "bioacoustics-model-zoo",
    "tensorflow",
    "tensorflow-hub",
    "soundfile",
]

[project.scripts]
multi-bird-db = "multi_bird_db.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
